Added header section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Landing page</title>
 </head>
 <body>
-    
+    <div class="header-section">
+        <div class="logo">Header Logo</div>
+        <ul>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>
+        </ul>
+    </div>
+
 </body>
 </html>
