--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <li><a href="">header link three</a></li>
         </ul>
     </div>
-
+    <div class="hero-section">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <img src="img/logo.jpg" alt="">
+    </div>
 </body>
 </html>
