Work on hero section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img src="img/logo.jpg" alt="">
+        <img src="img/logo.png" alt="">
     </div>
 </body>
 </html>
