Cards section finished

--- a/index.html
+++ b/index.html
@@ -24,5 +24,34 @@
         </div>
         <img src="img/logo.png" alt="">
     </div>
+    <div class="cards-section">
+        <h2>Some random information.</h2>
+        <div class="cards-container">
+            <div class="card">
+                <div class="card-face"></div>
+                <div class="card-text">
+                    this is some subtext under an illustration image
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-face"></div>
+                <div class="card-text">
+                    this is some subtext under an illustration image
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-face"></div>
+                <div class="card-text">
+                    this is some subtext under an illustration image
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-face"></div>
+                <div class="card-text">
+                    this is some subtext under an illustration image
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
