--- a/index.html
+++ b/index.html
@@ -60,5 +60,15 @@
         </p>
         <p class="author">-Thor, God of Thunder</p>
     </div>
+    <div class="call-to-action-section">
+        <div class="text-part">
+            <h3>Call to Action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button>Sign up</button>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
 </body>
 </html>
