--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img src="img/logo.png" alt="">
+        <img src="img/butterfly1.png" alt="">
     </div>
     <div class="cards-section">
         <h2>Some random information.</h2>
