--- a/index.html
+++ b/index.html
@@ -28,25 +28,33 @@
         <h2>Some random information.</h2>
         <div class="cards-container">
             <div class="card">
-                <div class="card-face"></div>
+                <div class="card-face">
+                    <img src="img/b6.png" alt="butterfly">
+                </div>
                 <div class="card-text">
                     this is some subtext under an illustration image
                 </div>
             </div>
             <div class="card">
-                <div class="card-face"></div>
+                <div class="card-face">
+                    <img src="img/b5.png" alt="butterfly">
+                </div>
                 <div class="card-text">
                     this is some subtext under an illustration image
                 </div>
             </div>
             <div class="card">
-                <div class="card-face"></div>
+                <div class="card-face">
+                    <img src="img/b1.png" alt="butterfly">
+                </div>
                 <div class="card-text">
                     this is some subtext under an illustration image
                 </div>
             </div>
             <div class="card">
-                <div class="card-face"></div>
+                <div class="card-face">
+                    <img src="img/b4.png" alt="butterfly">
+                </div>
                 <div class="card-text">
                     this is some subtext under an illustration image
                 </div>
