Small margin/padding changes

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <img src="img/butterfly1.png" alt="">
     </div>
     <div class="cards-section">
-        <h2>Some random information.</h2>
+        <h2>Choose your butterfly.</h2>
         <div class="cards-container">
             <div class="card">
                 <div class="card-face">
                     <img src="img/b6.png" alt="butterfly">
                 </div>
                 <div class="card-text">
-                    this is some subtext under an illustration image
+                    A beautiful butterfly
                 </div>
             </div>
             <div class="card">
@@ -40,7 +40,8 @@
                     <img src="img/b5.png" alt="butterfly">
                 </div>
                 <div class="card-text">
-                    this is some subtext under an illustration image
+                    A beautiful butterfly
+
                 </div>
             </div>
             <div class="card">
@@ -48,7 +49,8 @@
                     <img src="img/b1.png" alt="butterfly">
                 </div>
                 <div class="card-text">
-                    this is some subtext under an illustration image
+                    A beautiful butterfly
+
                 </div>
             </div>
             <div class="card">
@@ -56,7 +58,8 @@
                     <img src="img/b4.png" alt="butterfly">
                 </div>
                 <div class="card-text">
-                    this is some subtext under an illustration image
+                    A beautiful butterfly
+
                 </div>
             </div>
         </div>
