Small footer change

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <button>Sign up</button>
     </div>
     <div class="footer">
-        Copyright © The Odin Project 2021
+        Copyright © The Odin Project 2021, Made by vasivuk
     </div>
 </body>
 </html>
